mediafusion/ingressroute-prowlarr.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mediafusion-prowlarr.${dns_domain}
  namespace: mediafusion
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mediafusion-prowlarr.${dns_domain}`)
      kind: Rule
      services:
        - name: prowlarr
          kind: Service
          port: 9696
      middlewares:
      - name: mhdzumair-traefik-forward-auth
        namespace: aa-mhdzumair
